--- a/app/assets/javascripts/templates/contacts/status.html.erb
+++ b/app/assets/javascripts/templates/contacts/status.html.erb
@@ -15,8 +15,8 @@
   </ul>
 </div>
 <div ui-view class="pane right">
-  <div class="row">
-    <div class="col-sm-5 col-md-4">
+  <div class="row-fluid">
+    <div class="col-sm-12 col-md-6">
       <div class="card">
         <div class="fa-stack fa-lg">
           <i class="fa fa-circle fa-stack-2x"></i>
@@ -25,9 +25,7 @@
         <strong>1</strong> Start by picking a Contact Category on the left.
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-5 col-md-4">
+    <div class="col-sm-12 col-md-6">
       <div class="card">
         <div class="fa-stack fa-lg">
           <i class="fa fa-circle fa-stack-2x"></i>
