change ui-sref to contactId

--- a/app/assets/javascripts/templates/contacts/index.html.erb
+++ b/app/assets/javascripts/templates/contacts/index.html.erb
@@ -6,7 +6,7 @@
         {{contact.priority_code}}
       </td>
       <td data-title="'Name'">
-        <a ui-sref="contacts.show({id: contact.id})">{{contact.name}}</a>
+        <a ui-sref="contacts.show({contactId: contact.id})">{{contact.name}}</a>
       </td>
       <td data-title="'Primary Phone'">
         +{{contact.primary_phone}}
