appointment set record

--- a/app/assets/javascripts/templates/contacts/appointments/show.html.erb
+++ b/app/assets/javascripts/templates/contacts/appointments/show.html.erb
@@ -1,6 +1,28 @@
-<form novalidate ng-submit="createAppointment()" name="form">
+<h4>
+  <a class="text-muted pull-right"
+     ui-sref="contacts.show.appointments.index({contactId: contact.id})">
+    <i class="fa fa-arrow-left"></i>
+  </a>
+  <i class="fa fa-calendar-o"></i>
+  &nbsp;
+  Appointment with {{contact.first_name}}
+</h4>
+<div class="set_appointment clearfix">
+  <div class="date">
+    <div class="day-num">{{appointment.time | dateFilter : 'dd'}}</div>
+    <div class="month">{{appointment.time | dateFilter : 'MMM'}}</div>
+    <div class="day">{{appointment.time | dateFilter : 'EEE'}}</div>
+  </div>
+  <div class="content" ng-class="{active: future(appointment.time)}">
+    <h3>{{appointment.time | dateFilter : 'h:mm a'}}</h3>
+    <h4>{{appointment.address}}</h4>
+    <p>{{appointment.notes}}</p>
+  </div>
+</div>
+<br>
+<form novalidate ng-submit="saveAppointment()" name="form">
   <div class='row'>
-    <div class='col-sm-6 form-group'>
+    <div class='col-md-12 form-group'>
       <label class='control-label'>Time *</label>
       <span class="dropdown" dropdown on-toggle="toggled(open)">
         <a href class="dropdown-toggle" dropdown-toggle>
@@ -13,7 +35,7 @@
         </ul>
       </span>
     </div>
-    <div class='col-sm-6 form-group'>
+    <div class='col-md-12 form-group'>
       <label class='control-label'>Address *</label>
       <input name="address" type="text" class="form-control" ng-model="appointment.address" />
       <span class="form-error" ng-show="form.address.$invalid && form.address.$dirty">{{errorMessage('address')}}</span>
@@ -27,7 +49,6 @@
   <div class="form-actions clearfix">
     <div class="success pull-left" ng-show="form.$pristine && appointment.id"><i class="fa fa-check-circle"></i> Saved</div>
     <div class="warning pull-left" ng-hide="form.$pristine"><i class="fa fa-times-circle"></i> Pending</div>
-    <a ng-show="appointment.id" ng-click="reset_to_new()" class="btn btn-default">Add Another</a>
     <a ng-disabled="form.$pristine" ng-click="reset()" class="btn btn-default">Reset</a>
     <input ng-disabled="form.$pristine" type="submit" class="btn btn-primary" value="Save" />
   </div>
