--- a/app/assets/javascripts/templates/appointments/index.html.erb
+++ b/app/assets/javascripts/templates/appointments/index.html.erb
@@ -1,1 +1,26 @@
-hello world
+<div class="pane center">
+  <h4>
+    <i class="fa fa-calendar-o"></i>
+    &nbsp;
+    My Appointments
+  </h4>
+  <div class="set_appointment clearfix" ng-repeat="appointment in appointments">
+    <div class="date">
+      <div class="day-num">{{appointment.time | dateFilter : 'dd'}}</div>
+      <div class="month">{{appointment.time | dateFilter : 'MMM'}}</div>
+      <div class="day">{{appointment.time | dateFilter : 'EEE'}}</div>
+    </div>
+    <div class="content" ng-class="{active: future(appointment.time)}">
+      <h3>{{appointment.time | dateFilter : 'h:mm a'}}</h3>
+      <h4>{{appointment.contact_name}}</h4>
+      <h4>{{appointment.address}}</h4>
+      <p>{{appointment.notes}}</p>
+      <a ui-sref="contacts.show.appointments.show({contactId: appointment.contact_id, appointmentId: appointment.id})" class="pull-right">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
+    </div>
+  </div>
+</div>
