--- a/app/assets/javascripts/templates/call_session/show.html.erb
+++ b/app/assets/javascripts/templates/call_session/show.html.erb
@@ -11,7 +11,7 @@
       <a ng-click="expand(contact.id)" class="{{contact.category}}" ng-hide="expanded == contact.id">
         <div class="pull-right">{{contact.priority_code}}</div>
         <div ng-bind-html="contact.name | highlight: search"></div>
-        <span ng-show="contact.last_called"><small class="text-muted">Last Called: {{contact.last_called}} <span class="time" am-time-ago="contact.last_called" am-preprocess="unix"></span></small></span>
+        <span ng-show="contact.last_called"><small class="text-muted">Last Called: {{contact.last_called | dateFilter : 'dd MMM h:mm a'}}</small></span>
         <span ng-hide="contact.last_called"><small class="text-muted">Last Called: Never</small></span>
         <br>
         <div class="label label-{{contact.category}}" ng-bind-html="contact.status_title | highlight: search"></div>
@@ -22,10 +22,7 @@
       <div class="{{contact.category}}" ng-show="expanded == contact.id">
         <a ui-sref="call_session.call({contactId: contact.id})" class="btn btn-primary btn-block btn-sm"><i class="fa fa-phone"></i> Call <span ng-bind-html="contact.name | highlight: search"></span></a>
         <a ng-click="expand(null)" class="pull-right btn btn-danger btn-xs"><i class="fa fa-times"></i> Close</a>
-        <div class="btn-group">
-          <a class="btn btn-default btn-xs"><i class="fa fa-clock-o"></i> Postpone</a>
-          <a class="btn btn-default btn-xs" ng-click="contact.pinned = !contact.pinned"><i class="fa" ng-class="{'fa-star-o': !contact.pinned, 'fa-star': contact.pinned}"></i> <span ng-show="contact.pinned">Unstar</span><span ng-hide="contact.pinned">Star</span></a>
-        </div>
+        <a class="btn btn-default btn-xs" ng-click="contact.pinned = !contact.pinned"><i class="fa" ng-class="{'fa-star-o': !contact.pinned, 'fa-star': contact.pinned}"></i> <span ng-show="contact.pinned">Unstar</span><span ng-hide="contact.pinned">Star</span></a>
       </div>
     </div>
   </div>
