--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 
-$font-family-sans-serif: 'OpenSans' !default;
+$font-family-sans-serif: 'OpenSans', Arial !default;
 $primary-light-color: #ccc;
 $primary-color: #444;
 @import 'bootstrap-sass-official/assets/stylesheets/bootstrap-sprockets';
