add notes to contacts

--- a/app/assets/javascripts/templates/call/show.html.erb
+++ b/app/assets/javascripts/templates/call/show.html.erb
@@ -53,6 +53,11 @@
           <i class="fa fa-briefcase"></i>
           {{contact.occupation}}
         </li>
+        <li ng-show="contact.notes">
+          <h2>Notes</h2>
+          <small><i class="fa fa-pencil"></i>
+          {{contact.notes}}</small>
+        </li>
       </ul>
     </div>
     <div class="smile">
