--- a/app/assets/javascripts/templates/contacts/new.html.erb
+++ b/app/assets/javascripts/templates/contacts/new.html.erb
@@ -98,6 +98,12 @@
       <input name="anniversary" type="text" class="form-control" ng-model="contact.anniversary" /><span class="form-error" ng-show="form.anniversary.$invalid && form.anniversary.$dirty">{{errorMessage('anniversary')}}</span>
     </div>
   </div>
+  <div class='row'>
+    <div class='col-sm-12 form-group'>
+      <label class='control-label'>Notes</label>
+      <input name="notes" type="text" class="form-control" ng-model="contact.notes" /><span class="form-error" ng-show="form.notes.$invalid && form.notes.$dirty">{{errorMessage('notes')}}</span>
+    </div>
+  </div>
   <div class="form-actions clearfix">
     <div class="success pull-left" ng-show="form.$pristine && contact.id"><i class="fa fa-check-circle"></i> Saved</div>
     <div class="warning pull-left" ng-hide="form.$pristine"><i class="fa fa-times-circle"></i> Pending</div>
