appointment donation flow

--- a/app/assets/javascripts/templates/appointments/index.html.erb
+++ b/app/assets/javascripts/templates/appointments/index.html.erb
@@ -10,17 +10,31 @@
       <div class="month">{{appointment.time | dateFilter : 'MMM'}}</div>
       <div class="day">{{appointment.time | dateFilter : 'EEE'}}</div>
     </div>
-    <div class="content" ng-class="{active: future(appointment.time)}">
+    <div class="content" ng-class="{waiting: !future(appointment.time) && appointment.result == 'waiting', active: future(appointment.time)}">
       <h3>{{appointment.time | dateFilter : 'h:mm a'}}</h3>
       <h4>{{appointment.contact_name}}</h4>
       <h4>{{appointment.address}}</h4>
       <p>{{appointment.notes}}</p>
-      <a ui-sref="contacts.show.appointments.show({contactId: appointment.contact_id, appointmentId: appointment.id})" class="pull-right">
-        <span class="fa-stack fa-lg">
+      <div class="result pull-right">
+        <span class="fa-stack fa-lg" ng-show="!future(appointment.time) && appointment.result=='waiting'">
           <i class="fa fa-circle fa-stack-2x"></i>
-          <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+          <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
         </span>
-      </a>
+        <span class="fa-stack fa-lg" ng-show="appointment.result=='support'">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-dollar fa-stack-1x fa-inverse"></i>
+        </span>
+        <span class="fa-stack fa-lg" ng-show="appointment.result=='callback_for_decision'">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-phone fa-stack-1x fa-inverse"></i>
+        </span>
+        <a ui-sref="contacts.show.appointments.show({contactId: appointment.contact_id, appointmentId: appointment.id})">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+          </span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
