--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -664,8 +664,21 @@ body > footer {
     &.active {
       background-color: #1abc9c;
     }
+    &.waiting {
+      background-color: #f0bc2f;
+    }
     h3 {
       margin-top: 0;
+    }
+  }
+  .result {
+    .fa-inverse {
+      color: #777;
+    }
+    a {
+      .fa-inverse {
+        color: #fff;
+      }
     }
   }
 }
