--- a/app/assets/javascripts/templates/call/must_callback_for_decision.html.erb
+++ b/app/assets/javascripts/templates/call/must_callback_for_decision.html.erb
@@ -28,47 +28,47 @@
     </div>
   </div>
   <div class="row-fluid">
-    <div class="col-md-4 text-center text-muted">
+    <div class="col-md-3 text-center text-muted">
       <i class="fa fa-arrow-down"></i>
     </div>
-    <div class="col-md-4 text-center text-muted">
+    <div class="col-md-3 text-center text-muted">
       <i class="fa fa-arrow-down"></i>
     </div>
-    <div class="col-md-4 text-center text-muted">
+    <div class="col-md-6 text-center text-muted">
       <i class="fa fa-arrow-down"></i>
     </div>
   </div>
   <div class="row-fluid row-sm-height">
-    <div class="col-md-4 col-sm-height flow-box">
+    <div class="col-md-3 col-sm-height flow-box">
       <div class="flow-border"></div>
       <div class="flow-content">
         <div class="response success">
           <strong>Yes</strong><br>Able to Support
         </div>
-        <p>Would <strong>[time]</strong> on <strong>[day]</strong> suit you?</p>
-        <p class="text-muted"><small>Negotiate a Time that works for both you and your potential ministry partner</small></p>
-        <a ng-click="update_call('new_contact', 'got_appointment')"
-           class="btn btn-primary btn-block">Organize Appointment</a>
+        <p>That's great {{contact.first_name}}! We're proud to have you on our team as Ministry Partners.</p>
+        <a ng-click="update_call('must_callback_for_decision', 'got_support')"
+           class="btn btn-primary btn-block">Support</a>
       </div>
     </div>
-    <div class="col-md-4 col-sm-height flow-box">
+    <div class="col-md-3 col-sm-height flow-box">
       <div class="flow-border"></div>
       <div class="flow-content">
         <div class="response warning">
           <strong>Maybe</strong><br>Haven't Decided Yet
         </div>
         <p>Great, would I be able to give you a call back in <strong>[appropriate time]</strong> to organise a time then?</p>
-        <a ng-click="update_call('new_contact', 'must_callback')"
+        <a ng-click="update_call('must_callback_for_decision', 'must_callback')"
            class="btn btn-default btn-block">Must Callback</a>
       </div>
     </div>
-    <div class="col-md-4 col-sm-height flow-box">
+    <div class="col-md-6 col-sm-height flow-box">
       <div class="flow-border"></div>
       <div class="flow-content">
         <div class="response failure">
           <strong>No</strong><br>Not interested right now
         </div>
-        <a ng-click="update_call('new_contact', 'no_appointment')"
+        <p>Oh, that's no problem at all {{contact.first_name}}. Thank you for considering investing as a Ministry Partner.</p>
+        <a ng-click="update_call('must_callback_for_decision', 'no_support')"
            class="btn btn-danger btn-block">No Support</a>
       </div>
     </div>
