--- a/app/assets/javascripts/templates/call/stats.html.erb
+++ b/app/assets/javascripts/templates/call/stats.html.erb
@@ -6,7 +6,7 @@
     <h4>{{event.message}}</h4>
     <div class="history clearfix">
       <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-12">
           <span ng-show="event.transition">
             <span class="label label-warning">
               <strong>Transition</strong> {{event.transition}}
@@ -24,9 +24,9 @@
           <span class="label">
             <strong>Step</strong> {{event.step}}
           </span>
-        </div>
-        <div class="col-md-2 text-right">
-          <span class="time" am-time-ago="event.start_time" am-preprocess="unix"></span>
+          <div class="pull-right">
+            <span class="time" am-time-ago="event.start_time" am-preprocess="unix"></span>
+          </div>
         </div>
       </div>
     </div>
