(DONE) BUG - Not returning the user to the active call (DONE) BUG - Add contact and then add another

--- a/app/assets/javascripts/templates/call/show.html.erb
+++ b/app/assets/javascripts/templates/call/show.html.erb
@@ -60,6 +60,7 @@
         </li>
       </ul>
     </div>
+    <div class="operations"><a class="btn btn-danger btn-sm" ng-click="delete_call()"><i class="fa fa-trash-o"></i> &nbsp; Delete this Call</a></div>
     <div class="smile">
       <img ng-src="{{media}}" width="330" height="247" />
       <h1>Smile</h1>
