--- a/app/assets/javascripts/templates/contacts/new.html.erb
+++ b/app/assets/javascripts/templates/contacts/new.html.erb
@@ -109,7 +109,7 @@
   <div class="form-actions clearfix">
     <div class="success pull-left" ng-show="form.$pristine && contact.id"><i class="fa fa-check-circle"></i> Saved</div>
     <div class="warning pull-left" ng-hide="form.$pristine"><i class="fa fa-times-circle"></i> Pending</div>
-    <a ng-show="contact.id" ng-click="reset_to_new()" class="btn btn-default">Add Another</a>
+    <a ng-disabled="!contact.id" ng-click="reset_to_new()" class="btn btn-default">Add Another</a>
     <a ng-disabled="form.$pristine" ng-click="reset()" class="btn btn-default">Reset</a>
     <input ng-disabled="form.$pristine" type="submit" class="btn btn-primary" value="Save" />
   </div>
