--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -107,6 +107,16 @@ body > footer {
           text-shadow: 0px 0px 3px rgba(150, 150, 150, 1);
         }
       }
+      .operations {
+        width: 330px;
+        bottom: 247px;
+        position: absolute;
+        left: 0;
+        height: 50px;
+        padding: 10px;
+        text-align: right;
+        background-color: lighten(#182025, 10%);
+      }
       .smile {
         height: 247px;
         width: 330px;
@@ -140,7 +150,7 @@ body > footer {
           width: 330px;
           background-color: #f8f8f8;
           &.contact-card {
-            bottom: 247px;
+            bottom: 297px;
             padding: 50px 0 0 0;
             background-color: #182025;
             > h1 {
