--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-App="dmpd">
+<html ng-App="dmpd" ng-controller="ApplicationController">
 <head>
   <base href="/">
   <meta charset="utf-8" />
