status full title

--- a/app/assets/javascripts/templates/call/show.html.erb
+++ b/app/assets/javascripts/templates/call/show.html.erb
@@ -11,7 +11,7 @@
       <ul class="list-unstyled">
         <li>
           <h2>Reason For Calling</h2>
-          {{contact.status}}
+          {{contact.status_full_title}}
         </li>
         <li ng-show="contact.primary_phone">
           <h2>Primary Phone</h2>
