--- a/app/assets/javascripts/templates/call/new_contact.html.erb
+++ b/app/assets/javascripts/templates/call/new_contact.html.erb
@@ -155,5 +155,19 @@
         </div>
       </div>
     </div>
+    <div class="row-fluid">
+      <div class="col-md-offset-9 col-md-3 text-center text-muted">
+        <i class="fa fa-arrow-down"></i>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="col-md-offset-6 col-md-6 flow-box next-blurb">
+        <div class="flow-border"></div>
+        <div class="flow-content">
+          <div class="response"><strong>Next Blurb</strong></div>
+          <p>Would you like to receive our prayer newsletter updates. We send these out via email every six to eight weeks and would really appreciate your prayers. Is that something you'd be interested in?</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
