--- a/app/assets/javascripts/templates/call/ask_for_contacts.html.erb
+++ b/app/assets/javascripts/templates/call/ask_for_contacts.html.erb
@@ -53,15 +53,18 @@
     </div>
   </div>
   <div class="row-fluid">
-    <div class="col-md-6 text-center text-muted">
+    <div class="col-md-4 text-center text-muted">
       <i class="fa fa-arrow-down"></i>
     </div>
-    <div class="col-md-6 text-center text-muted">
+    <div class="col-md-4 text-center text-muted">
+      <i class="fa fa-arrow-down"></i>
+    </div>
+    <div class="col-md-4 text-center text-muted">
       <i class="fa fa-arrow-down"></i>
     </div>
   </div>
   <div class="row-fluid">
-    <div class="col-md-6 flow-box">
+    <div class="col-md-4 flow-box">
       <div class="flow-border"></div>
       <div class="flow-content">
         <div class="response success">Yes</div>
@@ -70,7 +73,17 @@
            class="btn btn-primary btn-block">Get Contact Info</a>
       </div>
     </div>
-    <div class="col-md-6 flow-box">
+    <div class="col-md-4 flow-box">
+      <div class="flow-border"></div>
+      <div class="flow-content">
+        <div class="response warning">Maybe</div>
+        Great, would I be able to give you a call back in <strong>[appropriate time]</strong>?
+        <a ng-click="update_call('ask_for_contacts', 'must_callback')"
+           class="btn btn-default btn-block">Setup Callback</a>
+      </div>
+    </div>
+  </div>
+    <div class="col-md-4 flow-box">
       <div class="flow-border"></div>
       <div class="flow-content">
         <div class="response failure">No</div>
